--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
+    
 }
 
 .intro-section {
@@ -36,7 +36,7 @@ body{
     background-color: blue;
     justify-content: space-evenly;
     align-items: center;
-    
+    color: white;
 
     
     
@@ -60,6 +60,7 @@ button {
 .intro-btn-container {
     display: flex;
     flex-direction: row;
+    gap: 1rem;
     
 }
 
@@ -79,4 +80,37 @@ button {
     width: 15%;
     font-size: 80%;
     padding: 0 0.5rem;
+}
+
+.learning-section {
+    height: 60vh;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+    
+}
+
+.txt-container {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    padding: 0 17rem;
+}
+
+.card-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    
+}
+.card{
+    background-color: white;
+    color: black;
+    border-radius: 1rem;
+    height: 80%;
+    width: 20%;
+    padding: 1rem .5rem;
+    
 }
