--- a/style.css
+++ b/style.css
@@ -114,3 +114,40 @@ button {
     padding: 1rem .5rem;
     
 }
+.method-section {
+    height: 30vh;
+    background-color: powderblue;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+}
+.txt-method {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2rem;
+    
+}
+.box-method {
+    background-color: white;
+    color: black;
+    border-radius: 1rem;
+    height: 60%;
+    width: 30%;
+    margin-left: 2rem;
+    padding: 1rem .5rem;
+    
+    
+    
+}
+
+.form-section {
+    height: 60vh;
+    background-color: rgb(125, 125, 125);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
