--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .main-header{
-    background-color: aqua;
+    background-color: rgb(63, 8, 139);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -147,7 +147,27 @@ button {
     height: 60vh;
     background-color: rgb(125, 125, 125);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.form{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    width: 80%;
+}
+
+.form-container {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    height: 60%;
+    background-color: white;
+    border-radius: 1rem;
+    justify-content: center;
+    
 }
