--- a/style.css
+++ b/style.css
@@ -1,26 +1,33 @@
 .main-header{
-    background-color: rgb(63, 8, 139);
+    background-color: rgb(82, 60, 113);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 10vh;
+    height: 5vh;
+    color: white;
 }
 
 .header-logo {
-    width: 50px;
-    height: 50px;
+    width: 30%;
+    height: 90%;
     border-radius: 50%;
 }
 
 .logo-container {
+    
+    height: 100%;
+    width : 10rem;
     display: flex;
+    flex-direction: row;
     align-items: center;
-    font-size: 1rem;
+
 }
+
 a  {
     text-decoration: none;
     font-size: 1rem;
-    color: black;
+    color: white;
+    padding: 0.5rem;
 }
 body{
     margin: 0;
@@ -30,10 +37,10 @@ body{
 }
 
 .intro-section {
-    height: 30vh ;
+    height: 40vh ;
     display: flex;
     flex-direction: row;
-    background-color: blue;
+    background-color: rgb(175, 134, 195);
     justify-content: space-evenly;
     align-items: center;
     color: white;
@@ -60,25 +67,29 @@ button {
 .intro-btn-container {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 2rem;
+    height: 2.5rem;
     
 }
 
 .ex-btn {
-    background-color: yellow;
-    color: black;
+    background-color: rgb(121, 87, 129);
+    color: white;
 
 }
-
+.more-btn {
+    background-color: rgba(255, 255, 255, 0);
+    color: white;
+}
 .intro-right {
     display: flex;
     flex-direction: column;
-    background-color: white;
-    color: black;
+    background-color: rgba(121, 87, 129);
+    color: white;
     border-radius: 1rem;
-    height: 80%;
-    width: 15%;
-    font-size: 80%;
+    height: 75%;
+    width: 20%;
+    
     padding: 0 0.5rem;
 }
 
