--- a/style.css
+++ b/style.css
@@ -87,47 +87,57 @@ button {
     background-color: rgba(121, 87, 129);
     color: white;
     border-radius: 1rem;
-    height: 75%;
-    width: 20%;
+    height: auto;
+    width: 30%;
+    box-shadow: 0 4px 10px rgb(67, 48, 71);
     
     padding: 0 0.5rem;
 }
 
 .learning-section {
-    height: 60vh;
-    background-color: lightgray;
+    height: 70vh;
+    background-color:  rgb(240, 227, 243);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     
     
+    
 }
 
-.txt-container {
-    width: 40%;
+.txt-learning {
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    padding: 0 17rem;
+    text-align: left;
+    font-size: 1.7rem;
+    
 }
 
 .card-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    width: 80%;
+    margin: 0 auto;
+    justify-content: space-between;
+    gap: 5rem;
     
 }
 .card{
     background-color: white;
     color: black;
     border-radius: 1rem;
-    height: 80%;
-    width: 20%;
+    height: auto;
+    width: 30%;
     padding: 1rem .5rem;
+    box-shadow: 0 4px 10px rgb(180, 169, 182);
     
 }
 .method-section {
-    height: 30vh;
-    background-color: powderblue;
+    height: 40vh;
+    background-color:  rgb(223, 212, 240);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -145,10 +155,11 @@ button {
     background-color: white;
     color: black;
     border-radius: 1rem;
-    height: 60%;
+    height: auto;
     width: 30%;
     margin-left: 2rem;
     padding: 1rem .5rem;
+    box-shadow:  0 4px 10p;
     
     
     
@@ -156,7 +167,7 @@ button {
 
 .form-section {
     height: 60vh;
-    background-color: rgb(125, 125, 125);
+    background-color:  rgb(240, 227, 243);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -167,22 +178,54 @@ button {
     
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: left;
+    justify-content: space-evenly;
+    height: 100%;
     width: 80%;
+    
 }
 
 .form-container {
     width: 80%;
     display: flex;
     flex-direction: column;
-    height: 60%;
+    height: 70%;
     background-color: white;
     border-radius: 1rem;
     justify-content: center;
+    align-items: center;
     
 }
 
+label{
+    color : rgb(111, 100, 121);
+}
+input{
+     color : rgba(167, 154, 179, 0.76);
+     border-radius: 1em;
+}
+
+input[id="email"]{
+    height: 3rem;
+
+    
+}
+input[id ="nom"]{
+    height: 2rem;
+
+    
+}
+input[id="message"]{
+    height: 7rem;
+    text-align: left;
+    padding-top: 0rem;
+    
+
+    
+}
+.label-input{
+    display: flex;
+    flex-direction: column;
+}
 footer {
     height: 10vh;
     background-color: rgb(63, 8, 139);
