--- a/style.css
+++ b/style.css
@@ -33,20 +33,29 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
     
 }
 
 .intro-section {
-    height: 40vh ;
+    height: 45vh ;
     display: flex;
     flex-direction: row;
     background-color: rgb(175, 134, 195);
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     color: white;
 
     
     
+}
+.intro-container{
+
+    display: flex;
+    flex-direction: row;
+    width: 85%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .intro-left {
@@ -63,7 +72,11 @@ button {
     border-radius: 5rem;
     font-size: 0.9rem;
     cursor: pointer;
+    
+    
 }
+
+
 .intro-btn-container {
     display: flex;
     flex-direction: row;
@@ -75,11 +88,15 @@ button {
 .ex-btn {
     background-color: rgb(121, 87, 129);
     color: white;
+    border: none;
+    
 
 }
 .more-btn {
     background-color: rgba(255, 255, 255, 0);
     color: white;
+    border: 1px solid white;
+    
 }
 .intro-right {
     display: flex;
@@ -89,9 +106,8 @@ button {
     border-radius: 1rem;
     height: auto;
     width: 30%;
-    box-shadow: 0 4px 10px rgb(67, 48, 71);
-    
-    padding: 0 0.5rem;
+    box-shadow: 0 4px 10px rgb(67, 48, 71,0.4);
+    padding: 2rem 1.5rem;
 }
 
 .learning-section {
@@ -106,23 +122,30 @@ button {
 }
 
 .txt-learning {
-    width: 80%;
+    width: 85%;
     height: auto;
-    margin: 0 auto;
+    margin: 3rem auto 2rem auto;
     display: flex;
     flex-direction: column;
     text-align: left;
-    font-size: 1.7rem;
     
+    
+}
+.txt-learning h2{
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+.txt-learning p{
+    width: 60%;
 }
 
 .card-container {
     display: flex;
     flex-direction: row;
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
     justify-content: space-between;
-    gap: 5rem;
+    gap: 2rem;
     
 }
 .card{
@@ -130,9 +153,9 @@ button {
     color: black;
     border-radius: 1rem;
     height: auto;
-    width: 30%;
-    padding: 1rem .5rem;
-    box-shadow: 0 4px 10px rgb(180, 169, 182);
+    width: 28%;
+    padding: 1.5rem 1rem;
+    box-shadow: 0 4px 10px rgba(180, 169, 182, 0.5);
     
 }
 .method-section {
@@ -144,11 +167,19 @@ button {
     align-items: center;
     
 }
+
+.method-container{
+    display: flex;
+    flex-direction: row;
+    width: 85%;
+    justify-content: space-between;
+    align-items: center;
+}
 .txt-method {
-    width: 50%;
+    width: 55%;
     display: flex;
     flex-direction: column;
-    font-size: 1.2rem;
+    font-size: 1rem;
     
 }
 .box-method {
@@ -156,43 +187,50 @@ button {
     color: black;
     border-radius: 1rem;
     height: auto;
-    width: 30%;
-    margin-left: 2rem;
-    padding: 1rem .5rem;
-    box-shadow:  0 4px 10p;
+    width: 35%;
+    margin-left: 0 ;
+    padding: 1.5rem 1rem;
+    
+    box-shadow: 0 4px 10px  rgb(178, 169, 192);
     
     
     
 }
 
 .form-section {
-    height: 60vh;
+    
     background-color:  rgb(240, 227, 243);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 4rem 0;
 }
 
 .form{
     
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    height: 100%;
-    width: 80%;
+    justify-content: space-around;
+    
+    width: 100%;
     
 }
 
 .form-container {
-    width: 80%;
+    width: 75%;
     display: flex;
     flex-direction: column;
-    height: 70%;
+    
     background-color: white;
     border-radius: 1rem;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 4px 10px rgba(180, 169, 182, 0.5);
+    align-items: flex-start;
+    padding: 2rem 5%;
+    margin: 0 auto 2rem auto;
+
     
 }
 
@@ -200,7 +238,7 @@ label{
     color : rgb(111, 100, 121);
 }
 input{
-    padding: 0.8rem 1rem;
+    padding: 1rem 1rem;
     border: 1px solid #d0d5dd;
     border-radius: 0.5rem;
     resize: vertical;
@@ -217,22 +255,56 @@ input[id ="nom"]{
     
 }
 textarea {
-    padding: 0.8rem 1rem;
+    padding: 1rem 1rem;
     border: 1px solid #d0d5dd;
     border-radius: 0.5rem;
     resize: none;
+    min-height: 8rem;
 }
 .label-input{
     display: flex;
     flex-direction: column;
 }
+input[type="submit"]{
+
+    width: 30%;
+    border-radius: 2rem;
+    color:  white;
+    background-color: rgb(121, 87, 129);
+    padding: 0.8rem 1rem;
+    margin-top: 1.5rem;
+    align-self:  flex-start;
+}
+
+.form-text{
+    display: flex ;
+    flex-direction: column;
+    
+    
+    width: 85%;
+    margin-bottom: 0 auto 2rem auto;
+}
+
+
+
+
+
+
 footer {
     height: 10vh;
-    background-color: rgb(63, 8, 139);
+     background-color: rgb(82, 60, 113);
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     
+}
+
+input, 
+textarea,
+select,
+button {
+    font-family: inherit; 
+    font-size: 1rem; 
 }
