--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
+
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    overflow-x: hidden;
+    
+}
+a  {
+    text-decoration: none;
+    font-size: 1rem;
+    color: white;
+    padding: 0.5rem;
+}
+
+button {
+    padding: 0.1rem 0.3rem;
+    display: block;
+    border-radius: 5rem;
+    font-size: 0.9rem;
+    cursor: pointer;
+    border: none;
+    
+    
+}
+
+input, 
+textarea,
+select,
+button {
+    font-family: inherit; 
+    font-size: 1rem; 
+}
+
+
 .main-header{
     background-color: rgb(82, 60, 113);
     display: flex;
@@ -18,33 +54,21 @@
     height: 100%;
     width : 10rem;
     display: flex;
-    flex-direction: row;
+    
     align-items: center;
 
 }
 
-a  {
-    text-decoration: none;
-    font-size: 1rem;
-    color: white;
-    padding: 0.5rem;
-}
-body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    
-}
+
 
 .intro-section {
-    height: 45vh ;
+    min-height: 45vh;
     display: flex;
-    flex-direction: row;
-    background-color: rgb(175, 134, 195);
     justify-content: center;
     align-items: center;
+    background-color: rgb(175, 134, 195);
     color: white;
+    padding: 2rem 0;
 
     
     
@@ -52,34 +76,34 @@ body{
 .intro-container{
 
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     width: 85%;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+    gap: 2rem;
 }
 
-.intro-left {
+.intro-left,.intro-right {
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 45%;
+    flex-grow: 1;
+    min-width:300px;
     
     
 }
 
-button {
-    padding: 0.1rem 0.3rem;
-    display: block;
-    border-radius: 5rem;
-    font-size: 0.9rem;
-    cursor: pointer;
+.intro-right { 
+    background-color: rgba(121, 87, 129);
+    border-radius: 1rem;
+    box-shadow: 0 4px 10px rgb(67, 48, 71,0.4);
+    padding: 2rem 1.5rem;
     
     
 }
-
 
 .intro-btn-container {
     display: flex;
-    flex-direction: row;
     gap: 2rem;
     height: 2.5rem;
     
@@ -88,7 +112,6 @@ button {
 .ex-btn {
     background-color: rgb(121, 87, 129);
     color: white;
-    border: none;
     
 
 }
@@ -98,24 +121,15 @@ button {
     border: 1px solid white;
     
 }
-.intro-right {
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(121, 87, 129);
-    color: white;
-    border-radius: 1rem;
-    height: auto;
-    width: 30%;
-    box-shadow: 0 4px 10px rgb(67, 48, 71,0.4);
-    padding: 2rem 1.5rem;
-}
+
 
 .learning-section {
-    height: 70vh;
+    min-height: 50vh;
     background-color:  rgb(240, 227, 243);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    padding: 3rem 0;
     
     
     
@@ -123,29 +137,29 @@ button {
 
 .txt-learning {
     width: 85%;
-    height: auto;
-    margin: 3rem auto 2rem auto;
-    display: flex;
-    flex-direction: column;
+    margin: 0 auto 2rem auto;
     text-align: left;
+    
     
     
 }
 .txt-learning h2{
-    font-size: 1.8rem;
+    font-size: 2rem;
     margin-bottom: 0.5rem;
 }
 .txt-learning p{
-    width: 60%;
+    font-size: 1.1rem;
+    line-height: 1.4;
 }
 
 .card-container {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     width: 85%;
     margin: 0 auto;
     justify-content: space-between;
-    gap: 2rem;
+    
+    
     
 }
 .card{
@@ -153,42 +167,44 @@ button {
     color: black;
     border-radius: 1rem;
     height: auto;
-    width: 28%;
+    width: 30%;
+    min-width: 250px;
     padding: 1.5rem 1rem;
     box-shadow: 0 4px 10px rgba(180, 169, 182, 0.5);
+    margin-bottom: 1.5rem;
+    
     
 }
 .method-section {
     height: 40vh;
     background-color:  rgb(223, 212, 240);
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding: 2rem 0;
     
 }
 
 .method-container{
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     width: 85%;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
 }
-.txt-method {
-    width: 55%;
-    display: flex;
-    flex-direction: column;
-    font-size: 1rem;
+.txt-method,.box-method {
+    width: 45%;
+    flex-grow: 1;
+    min-width: 300px;
     
 }
 .box-method {
+    
     background-color: white;
     color: black;
     border-radius: 1rem;
-    height: auto;
-    width: 35%;
-    margin-left: 0 ;
+    
     padding: 1.5rem 1rem;
     
     box-shadow: 0 4px 10px  rgb(178, 169, 192);
@@ -206,61 +222,43 @@ button {
     align-items: center;
     padding: 4rem 0;
 }
-
+.form-text{
+    width: 85%;
+    margin-bottom: 0 auto 2rem auto;
+}
 .form{
     
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    
+    gap: 1rem;
     width: 100%;
     
 }
 
 .form-container {
     width: 75%;
-    display: flex;
-    flex-direction: column;
-    
+    min-width: 300px;
     background-color: white;
     border-radius: 1rem;
-    justify-content: center;
-    align-items: center;
     box-shadow: 0 4px 10px rgba(180, 169, 182, 0.5);
-    align-items: flex-start;
     padding: 2rem 5%;
-    margin: 0 auto 2rem auto;
+    margin: 0 auto ;
 
     
 }
 
 label{
     color : rgb(111, 100, 121);
+    margin-bottom: 0.3rem;
 }
-input{
-    padding: 1rem 1rem;
+input,textarea{
+    padding: 1rem ;
     border: 1px solid #d0d5dd;
     border-radius: 0.5rem;
-    resize: vertical;
 }
 
-input[id="email"]{
-    height: 3rem;
 
-    
-}
-input[id ="nom"]{
-    height: 2rem;
 
-    
-}
-textarea {
-    padding: 1rem 1rem;
-    border: 1px solid #d0d5dd;
-    border-radius: 0.5rem;
-    resize: none;
-    min-height: 8rem;
-}
 .label-input{
     display: flex;
     flex-direction: column;
@@ -268,6 +266,7 @@ textarea {
 input[type="submit"]{
 
     width: 30%;
+    min-width: 150px;
     border-radius: 2rem;
     color:  white;
     background-color: rgb(121, 87, 129);
@@ -276,14 +275,7 @@ input[type="submit"]{
     align-self:  flex-start;
 }
 
-.form-text{
-    display: flex ;
-    flex-direction: column;
-    
-    
-    width: 85%;
-    margin-bottom: 0 auto 2rem auto;
-}
+
 
 
 
@@ -301,10 +293,3 @@ footer {
     
 }
 
-input, 
-textarea,
-select,
-button {
-    font-family: inherit; 
-    font-size: 1rem; 
-}
